--- a/app/src/main/res/layout/content_writenote.xml
+++ b/app/src/main/res/layout/content_writenote.xml
@@ -23,16 +23,16 @@
         android:gravity="top|center"
         android:orientation="vertical">
 
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:inputType="textMultiLine"
-        android:ems="10"
-        android:gravity="top|left"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:id="@+id/multiTextView" />
+        <EditText
+            android:id="@+id/multiTextView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:ems="10"
+            android:gravity="top|left"
+            android:inputType="textCapSentences|textAutoCorrect|textAutoComplete|textMultiLine" />
 
     </LinearLayout>
     </ScrollView>
